--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,27 @@
 @import url(variables.less);
+@import url(mixins.less);
+@import url(fonts.less);
+@import url(scaffolding.less);
+@import url(blocks/visualli-hidden.less);
+@import url(blocks/section-title.less);
+@import url(blocks/btn.less);
+@import url(blocks/lead.less);
+@import url(blocks/page-header);
+@import url(blocks/main-nav.less);
+@import url(blocks/page-main.less);
+@import url(blocks/advanteges.less);
+@import url(blocks/recommendations.less);
+@import url(blocks/booking.less);
+@import url(blocks/map.less);
+@import url(blocks/page-footer.less);
+@import url(blocks/social.less);
+@import url(blocks/copyright.less);
+@import url(blocks/gallery.less);
+@import url(blocks/photo-card.less);
+@import url(blocks/like-btn.less);
+@import url(blocks/video.less);
+@import url(blocks/player.less);
+@import url(blocks/testimonial-form.less);
+@import url(blocks/modal.less);
 
 
