--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -4,6 +4,7 @@
 @menu-hover: #81b3d2;
 @menu-current: #766357;
 @menu-current-hover: #604e43;
+@active-white: rgba(255, 255, 255, 0.3);
 
 @bg-blue: #81b3d2;
 @bg-blue-hover: #669ec0;
@@ -12,3 +13,4 @@
 @bg-form: #f2f2f2;
 @bg-form-hover: #e5e5e5;
 @bg-form-active: #d5d5d5;
+
