Исправила ошибки по трэвису

--- a/source/less/blocks/like-btn.less
+++ b/source/less/blocks/like-btn.less
@@ -2,7 +2,10 @@
   font-weight: bold;
   color: @heading-dark;
 
-  &:hover, &:focus, &:activ, &:visited {
+  &:hover,
+  &:focus,
+  &:active,
+  &:visited {
     color: @heading-dark;
   }
 }
