--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,25 +1,25 @@
-@import url(variables.less);
-@import url(mixins.less);
-@import url(fonts.less);
-@import url(scaffolding.less);
-@import url(blocks/visualli-hidden.less);
-@import url(blocks/section-title.less);
-@import url(blocks/btn.less);
-@import url(blocks/lead.less);
-@import url(blocks/page-header);
-@import url(blocks/main-nav.less);
-@import url(blocks/page-main.less);
-@import url(blocks/advanteges.less);
-@import url(blocks/recommendations.less);
-@import url(blocks/booking.less);
-@import url(blocks/map.less);
-@import url(blocks/page-footer.less);
-@import url(blocks/social.less);
-@import url(blocks/copyright.less);
-@import url(blocks/gallery.less);
-@import url(blocks/photo-card.less);
-@import url(blocks/like-btn.less);
-@import url(blocks/video.less);
-@import url(blocks/player.less);
-@import url(blocks/testimonial-form.less);
-@import url(blocks/modal.less);
+@import "variables.less";
+@import "mixins.less";
+@import "fonts.less";
+@import "scaffolding.less";
+@import "blocks/visualli-hidden.less";
+@import "blocks/section-title.less";
+@import "blocks/btn.less";
+@import "blocks/lead.less";
+@import "blocks/page-header";
+@import "blocks/main-nav.less";
+@import "blocks/page-main.less";
+@import "blocks/advanteges.less";
+@import "blocks/recommendations.less";
+@import "blocks/booking.less";
+@import "blocks/map.less";
+@import "blocks/page-footer.less";
+@import "blocks/social.less";
+@import "blocks/copyright.less";
+@import "blocks/gallery.less";
+@import "blocks/photo-card.less";
+@import "blocks/like-btn.less";
+@import "blocks/video.less";
+@import "blocks/player.less";
+@import "blocks/testimonial-form.less";
+@import "blocks/modal.less";
