--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -4,7 +4,6 @@
   padding: 90px 20px 85px;
   width: 100%;
 
-
-  background: @bg-blue url(../../img/bg-back-mobile@1x.jpg) center no-repeat;
-  background-size: auto 100%;
+  background: @bg-blue url("../../img/bg-back-mobile@1x.jpg") center no-repeat;
+  background-size: cover;
 }
