--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,15 +1,15 @@
 @font-face {
   font-family: "Pt Sans";
-  src: ("../fonts/ptsans.woff2") format("woff2");
-  src: ("../fonts/ptsans.woff") format("woff");
+  src: url("../fonts/ptsans.woff2") format("woff2");
+  src: url("../fonts/ptsans.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Pt Sans";
-  src: ("../fonts/ptsansbold.woff2") format("woff2");
-  src: ("../fonts/ptsansbold.woff2") format("woff");
+  src: url("../fonts/ptsansbold.woff2") format("woff2");
+  src: url("../fonts/ptsansbold.woff2") format("woff");
   font-weight: bold;
   font-style: normal;
 }
