Избавилась от горизонтального скролла и зафиксировала ширину контента для мобильных

--- a/source/less/blocks/advanteges.less
+++ b/source/less/blocks/advanteges.less
@@ -3,6 +3,7 @@
 }
 
 .advanteges__wrap {
+  .mobile-center();
   padding: 28px 20px 30px;
 }
 
@@ -28,14 +29,6 @@
 }
 
 .advanteges__item {
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-
-  width: 100vw;
-
   background-color: @bg-grey;
 
   &--photo {
