--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,5 +1,5 @@
 .modal {
-  padding: 44px 20px 0;
+  width: 100%;
 
   &--ok {
     .lead__text {
@@ -10,6 +10,7 @@
 
 .modal__lead {
   margin: 0 auto;
+  padding: 44px 20px 0;
 
   width: 80%;
 }
@@ -18,19 +19,12 @@
   &--fail {
     margin-bottom: 35px;
 
-    width: 66%;
+    width: 180px;
   }
 }
 
 .modal__btn-wrap {
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
   padding: 20px;
-
-  width: 100vw;
 
   background-color: @bg-grey;
 }
