--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,8 +1,5 @@
 .page-main {
-  padding: 40px 20px 0;
+  margin: 0 auto;
+  padding: 40px 0 0;
   width: 100%;
-
-  &--photo {
-    text-align: left;
-  }
 }
