--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -16,6 +16,12 @@ body {
   color: @text-color;
 }
 
+.center-wrap {
+  .mobile-center();
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 img {
   max-width: 100%;
   height: auto;
