--- a/source/less/blocks/booking.less
+++ b/source/less/blocks/booking.less
@@ -12,3 +12,11 @@
 .booking__lead {
   margin: 24px 0 40px;
 }
+
+@media (min-width: @tablet-width) {
+  .booking {
+    margin: 0 auto;
+    padding: 50px 0;
+    width: 458px;
+  }
+}
