--- a/source/less/blocks/player.less
+++ b/source/less/blocks/player.less
@@ -6,3 +6,18 @@
 
   background: url("../../img/video-mobile@1x.jpg") center no-repeat;
 }
+
+@media (min-width: @tablet-width) {
+  .player__screen {
+    width: 648px;
+    height: 500px;
+
+    background-size: cover;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .player__screen {
+    width: 800px;
+  }
+}
