--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,10 +1,27 @@
 .copyright {
+  display: flex;
+  align-items: center;
+
   .mobile-center();
   padding: 0 20px;
 }
 
+.copyright__logo {
+  display: block;
+  .reset-indents();
+}
+
 .copyright__text {
+  .reset-indents();
+
   font-size: 14px;
   line-height: 26px;
   color: @heading-dark;
+}
+
+@media (min-width: @tablet-width) {
+  .copyright {
+    .reset-indents();
+    width: auto;
+  }
 }
