--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,4 +1,9 @@
 .social {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
   .mobile-center();
   padding: 0 20px;
 }
@@ -12,5 +17,21 @@
 }
 
 .social__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   .reset-list();
+}
+
+@media (min-width: @tablet-width) {
+  .social {
+    flex-direction: row;
+
+    .reset-indents();
+  }
+
+  .social__tag {
+    margin-bottom: 0;
+  }
 }
