--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -14,3 +14,13 @@
   margin: 0 auto;
   width: 320px;
 }
+
+.tablet-center() {
+  margin: 0 auto;
+  width: 768px;
+}
+
+.desktop-center() {
+  margin: 0 auto;
+  width: 1200px;
+}
