Готова Главная мобильная версия

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,7 +1,13 @@
 .page-main {
   margin: 0 auto;
-  padding: 40px 0 0;
+  padding-top: 34px;
   width: 100%;
+}
+
+@media (min-width: @tablet-width) {
+  .page-main {
+    padding-top: 42px;
+  }
 }
 
 @media (min-width: @desktop-width) {
