--- a/source/less/blocks/advanteges.less
+++ b/source/less/blocks/advanteges.less
@@ -4,21 +4,48 @@
 }
 
 .advanteges__lead {
+  position: relative;
   order: -3;
 
-  margin: 30px auto;
+  margin: 0 auto;
   width: 320px;
-  padding: 0 20px;
+  padding: 28px 20px;
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    bottom: -17px;
+    left: 0;
+
+    width: 100%;
+    height: 37px;
+
+    background: url("../../img/bg-triangle.svg") center no-repeat;
+  }
 }
 
 .advanteges__wrap {
   .mobile-center();
-  padding: 28px 20px 30px;
+  padding: 28px 20px;
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    bottom: 0;
+    left: 6%;
+
+    width: 88%;
+    height: 1px;
+
+    background-color: rgba(0, 0, 0, 0.1);
+  }
 }
 
 .advanteges__heading {
   .reset-indents();
-  margin-bottom: 15px;
+  margin-bottom: 7px;
 
   font-size: 18px;
   line-height: 26px;
@@ -26,37 +53,80 @@
 }
 
 .advanteges__number {
-  display: block;
+  position: relative;
 
+  display: inline-block;
   .reset-indents();
-  margin-bottom: 15px;
+  margin-bottom: 14px;
+
+  &::before {
+    content: "";
+
+    position: absolute;
+    left: -12px;
+    top: 11px;
+
+    width: 8px;
+    height: 2px;
+
+    background-color: @text-color;
+    opacity: 0.7;
+  }
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    right: -12px;
+    top: 11px;
+
+    width: 8px;
+    height: 2px;
+
+    background-color: @text-color;
+    opacity: 0.7;
+  }
 }
 
 .advanteges__text {
   .reset-indents();
+
   line-height: 21px;
 }
 
 .advanteges__item {
+  position: relative;
+
   background-color: @bg-grey;
+
+  &--last {
+    .advanteges__wrap::after {
+      display: none;
+    }
+  }
 
   &--photo {
     color: @heading-white;
     background-color: @bg-blue;
 
     .advanteges__wrap {
-      padding: 40px 20px;
+      padding: 38px 20px;
     }
 
     .advanteges__heading {
       color: @heading-white;
     }
 
+    .advanteges__number::before,
+    .advanteges__number::after {
+      background-color: @heading-white;
+    }
+
     &:first-of-type {
       order: -2;
 
       .advanteges__wrap {
-        padding-top: 60px;
+        padding-top: 57px;
       }
     }
   }
@@ -78,6 +148,16 @@
 
   .advanteges__lead {
     width: 768px;
+    padding-bottom: 52px;
+  }
+
+  .advanteges__heading {
+    font-size: 26px;
+    margin-bottom: 10px;
+  }
+
+  .advanteges__number {
+    margin-bottom: 18px;
   }
 
   .advanteges__item--photo {
