--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,10 +1,13 @@
 .page-footer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
 
-  padding: 36px 0 23px;
+  padding: 35px 0 23px;
+}
+
+.page-footer__copyright {
+  margin-top: 40px;
 }
 
 @media (min-width: @tablet-width) {
@@ -12,8 +15,12 @@
     flex-direction: row;
 
     .tablet-center();
-    padding: 0 60px;
-    min-height: 120px;
+    padding: 36px 60px;
+  }
+
+  .page-footer__copyright {
+    margin-top: 0;
+    margin-left: auto;
   }
 }
 
