--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,10 @@
+.page-header {
+  position: relative;
+}
+
 .page-header__banner {
   .reset-indents();
-  margin-top: -40px;
+  margin-top: -35px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
@@ -14,6 +18,19 @@
 
   &--page {
     padding: 52px 0 67px;
+  }
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+
+    width: 100%;
+    height: 28px;
+
+    background: url("../../img/bg-intro-triangle-mobile.svg") center no-repeat;
   }
 }
 
