--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -13,11 +13,11 @@
   background-size: cover;
 
   &--main {
-    padding: 90px 0 85px;
+    padding: 90px 0 77px;
   }
 
   &--page {
-    padding: 52px 0 67px;
+    padding: 52px 0 57px;
   }
 
   &::after {
@@ -63,6 +63,9 @@
 @media (min-width: @desktop-width) {
   .page-header {
     .desktop-center();
+
+    background-color: #ffffff;
+    box-shadow: 0 -10px 15px rgba(0, 0, 0, 0.2);
   }
 
   .page-header__banner--page {
