--- a/source/less/blocks/booking.less
+++ b/source/less/blocks/booking.less
@@ -11,12 +11,38 @@
 
 .booking__lead {
   margin: 20px 0 35px;
+
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .booking {
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 55px 0;
     width: 458px;
+  }
+
+  .booking__trigger {
+    font-size: 30px;
+  }
+
+  .booking__lead {
+    margin: 26px 0 42px;
+
+    br {
+      display: block;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .booking {
+    padding-bottom: 65px;
+  }
+
+  .booking__lead {
+    margin-bottom: 46px;
   }
 }
