--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -27,6 +27,13 @@
 @media (min-width: @desktop-width) {
   .page-footer {
     .desktop-center();
-    padding: 0 130px;
+    padding: 36px 0;
+
+    background-color: #ffffff;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+  }
+
+  .page-footer__copyright {
+    margin-right: 45px;
   }
 }
