--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,15 +1,35 @@
 .page-main {
   margin: 0 auto;
-  padding-top: 34px;
+  padding-top: 42px;
   width: 100%;
+
+  &--inner {
+    padding-top: 38px;
+  }
+}
+
+.page-main__lead {
+  margin-bottom: 26px;
 }
 
 @media (min-width: @tablet-width) {
   .page-main {
-    padding-top: 42px;
+    padding-top: 0;
+  }
+
+  .page-main__lead {
+    margin-bottom: 0;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .desktop-center();
+  .page-main {
+    .desktop-center();
+    padding-top: 35px;
+
+    background-color: #ffffff;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  }
 }
+
+
