--- a/source/less/blocks/recommendations.less
+++ b/source/less/blocks/recommendations.less
@@ -78,20 +78,48 @@
   .recommendations__item {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
-    padding: 50px 45px;
+    padding: 60px 45px 30px;
     width: 256px;
 
     &:nth-child(2) {
       order: 2;
     }
+
+    &::before {
+      position: static;
+    }
+
+    &--booking::before {
+      width: 75px;
+      height: 75px;
+    }
+
+    &--food::before {
+      width: 77px;
+      height: 75px;
+    }
+
+    &--souvenirs::before {
+      width: 64px;
+      height: 75px;
+    }
+  }
+
+  .recommendations__heading {
+    margin-top: 26px;
+    margin-bottom: 20px;
+
+    font-size: 21px;
+    line-height: 26px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .recommendations {
     .desktop-center();
-    padding: 0;
+    padding-bottom: 15px;
   }
 
   .recommendations__item {
