Вопрос по legend и focus

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -12,6 +12,10 @@
   margin-bottom: 26px;
 }
 
+.page-main__lead--testimonial {
+  margin-bottom: 16px;
+}
+
 @media (min-width: @tablet-width) {
   .page-main {
     padding-top: 0;
