Исправила пути картинок

--- a/source/less/blocks/recommendations.less
+++ b/source/less/blocks/recommendations.less
@@ -25,7 +25,7 @@
     width: 39px;
     height: 37px;
 
-    background: url("../../img/icon-house.svg") center no-repeat;
+    background: url("../img/icon-house.svg") center no-repeat;
     background-size: contain;
   }
 
@@ -35,7 +35,7 @@
     width: 32px;
     height: 38px;
 
-    background: url(../../img/icon-gift.svg) center no-repeat;
+    background: url(../img/icon-gift.svg) center no-repeat;
     background-size: contain;
   }
 
@@ -45,7 +45,7 @@
     width: 40px;
     height: 35px;
 
-    background: url("../../img/icon-burger.svg") center no-repeat;
+    background: url("../img/icon-burger.svg") center no-repeat;
     background-size: contain;
   }
 }
