--- a/source/less/blocks/advanteges.less
+++ b/source/less/blocks/advanteges.less
@@ -105,7 +105,7 @@
     width: 100%;
     height: 37px;
 
-    background: url("../../img/bg-triangle.svg") center no-repeat;
+    background: url("../img/bg-triangle.svg") center no-repeat;
   }
 
   &--photo {
