--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -64,7 +64,7 @@
       top: 17px;
       right: 20px;
 
-      background: transparent url("../../img/icon-cross.svg") 0 0 no-repeat;
+      background: transparent url("../img/icon-cross.svg") 0 0 no-repeat;
     }
   }
 
@@ -77,7 +77,7 @@
       bottom: 53px;
       right: 20px;
 
-      background: transparent url("../../img/icon-menu.svg") 0 0 no-repeat;
+      background: transparent url("../img/icon-menu.svg") 0 0 no-repeat;
     }
   }
 
