--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -2,7 +2,7 @@
   width: 100%;
   height: 350px;
 
-  background: url("../../img/bg-map-marker-mobile@1x.jpg") center no-repeat;
+  background: url("../img/bg-map-marker-mobile@1x.jpg") center no-repeat;
   background-size: cover;
 }
 
