--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -9,7 +9,7 @@
   margin-right: auto;
   width: 100%;
 
-  background: @bg-blue url("../../img/bg-back-mobile@1x.jpg") center no-repeat;
+  background: @bg-blue url("../img/bg-back-mobile@1x.jpg") center no-repeat;
   background-size: cover;
 
   &--main {
@@ -30,7 +30,7 @@
     width: 100%;
     height: 28px;
 
-    background: url("../../img/bg-intro-triangle-mobile.svg") center no-repeat;
+    background: url("../img/bg-intro-triangle-mobile.svg") center no-repeat;
   }
 }
 
