--- a/source/less/blocks/player.less
+++ b/source/less/blocks/player.less
@@ -8,7 +8,7 @@
   width: 320px;
   height: 200px;
 
-  background: url("../../img/video-mobile@1x.jpg") center no-repeat;
+  background: url("../img/video-mobile@1x.jpg") center no-repeat;
 }
 
 .player__controls {
