--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -34,6 +34,12 @@
 
   background-color: @bg-blue;
 
+  a {
+    display: inline-block;
+    width: 47px;
+    height: 48px;
+  }
+
   &::before {
     content: "";
 
@@ -45,7 +51,7 @@
     width: 18px;
     height: 14px;
 
-    background: url("../../img/icon-twitter.svg") center no-repeat;
+    background: url("../img/icon-twitter.svg") center no-repeat;
     background-size: contain;
   }
 
@@ -53,14 +59,14 @@
     width: 9px;
     height: 18px;
 
-    background-image: url("../../img/icon-facebook.svg");
+    background-image: url("../img/icon-facebook.svg");
   }
 
   &--youtube::before {
     width: 20px;
     height: 14px;
 
-    background-image: url("../../img/icon-youtube.svg");
+    background-image: url("../img/icon-youtube.svg");
   }
 
   &:hover,
