--- a/source/less/blocks/recommendations.less
+++ b/source/less/blocks/recommendations.less
@@ -35,7 +35,7 @@
     width: 32px;
     height: 38px;
 
-    background: url(../img/icon-gift.svg) center no-repeat;
+    background: url("../img/icon-gift.svg") center no-repeat;
     background-size: contain;
   }
 
