--- a/source/less/blocks/testimonial-form.less
+++ b/source/less/blocks/testimonial-form.less
@@ -9,7 +9,6 @@
 .testimonial-form__group {
   .reset-indents();
   width: 100%;
-  padding: 20px 0 25px;
 
   text-align: left;
 
@@ -79,6 +78,9 @@
 
 .testimonial-form__legend,
 .testimonial-form__label--textarea {
+  margin-top: 20px;
+  margin-bottom: 20px;
+
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
