--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -26,6 +26,7 @@
 
     &--testimonial {
       padding-top: 60px;
+      padding-bottom: 50px;
     }
   }
 }
@@ -37,5 +38,9 @@
 
     background-color: #ffffff;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  }
+
+  .page-main__lead--testimonial {
+    padding-bottom: 40px;
   }
 }
