Адаптировала и ретинизировала изображения. Добавила svg-спрайт

--- a/source/less/blocks/advanteges.less
+++ b/source/less/blocks/advanteges.less
@@ -219,6 +219,13 @@
     padding-bottom: 64px;
   }
 
+  .advanteges__photo-wrap {
+    width: 800px;
+    height: 256px;
+
+    overflow: hidden;
+  }
+
   .advanteges__photo {
     width: 800px;
   }
